--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "cat-api": "^1.2.1",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.7",
     "slim-select": "^2.8.1"
